# medclub-test-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
apps/authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/tests/: test_authentication.py
apps/items/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/items/migrations/: 0001_initial.py
apps/items/tests/: test_item.py
apps/orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_remove_order_items_order_total_price_orderitem.py
apps/orders/tests/: test_order.py
medclub/: asgi.py  settings.py  urls.py  wsgi.py
utils/: mixins.py  validators.py
